Fixed all new URL() and File.toURL() since the return URL may contain invalid characters.